# nxusKit-examples

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md
.github/workflows/: ci.yml  release.yml
conformance/: clips-json-contract.json  content-review-queue.json  dependency-audit.json  difficulty-thresholds.json  example-groups.json  example-tiers.json  example_smoke_matrix.json  examples_manifest.json
conformance/harness/: example_smoke_matrix.schema.json  schema.json
examples/: EXAMPLE_README_TEMPLATE.md  README.md
examples/apps/arbiter/: README.md
examples/apps/arbiter/go/: Makefile  README.md  clips_validator.go  clips_wire.go  config.go  go.mod  llm_solver.go  solver.go  solver_test.go  types.go
examples/apps/arbiter/rust/: Cargo.toml
examples/apps/arbiter/shared/: solver-config.json
examples/apps/puzzler/: README.md
examples/apps/puzzler/go/: Makefile  README.md  clips_solver.go  clips_wire.go  go.mod  llm_solver.go  set_game.go  types.go
examples/apps/puzzler/rust/: Cargo.toml
examples/apps/racer/: README.md
examples/apps/racer/go/: Makefile  README.md  clips_runner.go  clips_runner_real.go  clips_wire.go  go.mod  go.sum  judge.go  llm_runner.go  llm_runner_real.go  problem.go  racer.go  racer_test.go  stats.go  types.go
examples/apps/racer/rust/: Cargo.toml
examples/apps/riffer/: README.md
examples/apps/riffer/go/: Makefile  README.md  analyzer.go  analyzer_test.go  clips_bridge.go  clips_bridge_test.go  errors.go  fixtures_test.go  go.mod  go.sum  intervals.go  keys.go  midi.go  musicxml.go  scales.go  scorer.go  scorer_test.go  transformer.go  transformer_test.go  types.go
examples/apps/riffer/rust/: Cargo.toml  errors.rs  lib.rs  main.rs  types.rs
examples/apps/riffer/rust/engine/: analyzer.rs  clips_bridge.rs  mod.rs  scorer.rs  transformer.rs
examples/apps/riffer/rust/formats/: midi.rs  mod.rs  musicxml.rs
examples/apps/riffer/rust/llm/: mod.rs  narrative.rs  transform.rs
examples/apps/riffer/rust/theory/: intervals.rs  keys.rs  mod.rs  scales.rs
examples/apps/ruler/: README.md
examples/apps/ruler/go/: Makefile  README.md  go.mod  go.sum  llm_generator.go  prompts.go  ruler.go  ruler_test.go  (+2 more)
examples/integrations/alert-triage/: README.md  sample_alerts.json
examples/integrations/bn-solver-clips-pipeline/: README.md
examples/integrations/bn-structure-learning/: README.md
examples/integrations/cli-assistant/: README.md
examples/integrations/cli-assistant/rust/: Cargo.toml
examples/integrations/cli-assistant/rust/src/: main.rs
examples/integrations/clips-basics/: README.md
examples/integrations/clips-basics/rust/: Cargo.toml
examples/integrations/clips-basics/rust/src/: animal_classification.rs  basic.rs  inventory.rs  lib.rs  medical_triage.rs  pipeline.rs  scheduler.rs
examples/integrations/clips-llm-hybrid/: README.md  ticket-routing.clp
examples/integrations/clips-llm-hybrid/rust/: Cargo.toml
examples/integrations/clips-llm-hybrid/rust/src/: lib.rs  main.rs
examples/integrations/llm-solver-hybrid/: README.md
examples/integrations/lmstudio/: README.md
examples/integrations/ollama/: README.md
examples/integrations/ollama/rust/: Cargo.toml
examples/integrations/ollama/rust/src/: debug_stream.rs  main.rs
examples/integrations/zen-decisions/: README.md
examples/integrations/zen-decisions/rust/: Cargo.toml
examples/integrations/zen-decisions/rust/src/: main.rs
examples/patterns/auth-helper/: README.md
examples/patterns/auth-helper/cli/: Cargo.toml  README.md
examples/patterns/auth-helper/cli/src/: main.rs
examples/patterns/auth-helper/core/: Cargo.toml
examples/patterns/auth-helper/core/src/: lib.rs
examples/patterns/basic-chat/: README.md
examples/patterns/bayesian-inference/: README.md
examples/patterns/blocking-api/: README.md
examples/patterns/capability-detection/: README.md
examples/patterns/convenience-api/: README.md
examples/patterns/cost-routing/: README.md
examples/patterns/multi-provider/: README.md
examples/patterns/polymorphic/: README.md
examples/patterns/retry-fallback/: README.md
examples/patterns/solver/: README.md
examples/patterns/solver-what-if/: README.md
examples/patterns/streaming/: README.md
examples/patterns/structured-output/: README.md
examples/patterns/timeout-config/: README.md
examples/patterns/token-budget/: README.md
examples/patterns/vision/: README.md
examples/shared/: Makefile.go-example.template
examples/shared/clips-wire-rust/: Cargo.toml
examples/shared/data/: animals.json  inventory-scenario.json  medical-cases.json  scheduler-scenario.json
examples/shared/python/: __init__.py  clips_wire.py  interactive.py  test_interactive.py
examples/shared/rules/: animal-classification.clp  inventory-management.clp  medical-triage.clp  task-scheduler.clp
examples/shared/rust/: Cargo.toml
examples/shared/rust-support/: Cargo.toml
examples/shared/rust-support/src/: arbiter.rs  lib.rs  puzzler.rs  racer.rs  ruler.rs
examples/shared/rust/src/: config.rs  lib.rs  step.rs  tty.rs  verbose.rs
scripts/: assemble-notice.sh  audit-example-deps.py  check-content-staleness.sh  check-difficulty-drift.sh  check-rust-example-linkage.sh  compute-difficulty.py  generate-example-smoke-matrix.py  generate-examples-showcase.sh  generate-notice-supplement.py  lint-example-data.sh  normalize_example_readme_build_run.py  pre-pr-check.sh  setup-sdk.sh  test-entitlements.sh  test-examples.sh  verify-example-tier-manifest.sh
tools/scripts/: verify_examples_manifest.sh
(+299 files in other folders)
