[package]
name = "llm-patterns"
version = "0.1.0"
edition = "2024"
description = "Support types for nxusKit LLM pattern examples (Arbiter, Puzzler, Ruler, Racer)"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
strsim = "0.11"

[profile.release]
panic = "abort"
