[package]
name = "riffer-example"
version = "0.1.0"
edition = "2024"
description = "Riffer - Music analysis and transformation with CLIPS and LLM"
publish = false

[lib]
name = "riffer"
path = "lib.rs"

[[bin]]
name = "riffer"
path = "main.rs"

[dependencies]
nxuskit = { path = "../../../../packages/nxuskit" }
nxuskit-examples-clips-wire = { path = "../../../shared/clips-wire-rust" }
nxuskit-examples-interactive = { path = "../../../shared/rust" }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
midly = "0.5"
roxmltree = "0.20"
quick-xml = { version = "0.37", features = ["serialize"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
panic = "abort"
