[package]
name = "clips-basics-example"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
nxuskit = { path = "../../../../packages/nxuskit" }
nxuskit-examples-clips-wire = { path = "../../../shared/clips-wire-rust" }
nxuskit-examples-interactive = { path = "../../../shared/rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "animal_classification"
path = "src/animal_classification.rs"

[[bin]]
name = "clips_basic"
path = "src/basic.rs"

[[bin]]
name = "inventory"
path = "src/inventory.rs"

[[bin]]
name = "medical_triage"
path = "src/medical_triage.rs"

[[bin]]
name = "pipeline"
path = "src/pipeline.rs"

[[bin]]
name = "scheduler"
path = "src/scheduler.rs"

[profile.release]
panic = "abort"
