[package]
name = "clips-llm-hybrid"
version = "0.1.0"
edition = "2024"
publish = false

# Exclude from parent workspace - this is a standalone example
[workspace]

[dependencies]
nxuskit = { path = "../../../../sdk/nxuskit-rust" }
nxuskit-examples-clips-wire = { path = "../../../shared/clips-wire-rust" }
nxuskit-examples-interactive = { path = "../../../shared/rust" }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
panic = "abort"
