[package]
name = "zen-decisions-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
nxuskit-examples-interactive = { path = "../../../shared/rust" }
nxuskit = { path = "../../../../packages/nxuskit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
panic = "abort"
