[package]
name = "auth-helper-core"
version = "0.1.0"
edition = "2024"
description = "Shared auth flow logic for auth-helper examples"
publish = false

[dependencies]
nxuskit = { path = "../../../../sdk/nxuskit-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5"
